--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ on:
     - cron: '52 2 * * *'
 
 jobs:
-  scheduled:
+  deploy:
     runs-on: ubuntu-latest
     steps:
     - name: Check out this repo
@@ -18,6 +18,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.10"
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: 12
     - uses: actions/cache@v2
       name: Configure pip caching
       with:
