--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,8 +36,8 @@ jobs:
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-
-    - name: Configure npm caching
-      uses: actions/cache@v2
+    - uses: actions/cache@v2
+      name: Configure npm caching
       with:
         path: ~/.npm
         key: ${{ runner.os }}-npm-
