Added datasette-pretty-json plugin
Also now listing plugins in requirements.txt so that the
GitHub dependency graph can pick them up.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,4 +49,5 @@ jobs:
           --about "iam-definitions-datasette" \
           --about_url "https://github.com/simonw/iam-definitions-datasette" \
           --install datasette-graphql \
-          --install datasette-block-robots
+          --install datasette-block-robots \
+          --install datasette-pretty-json
